url-shortener/k8s/traefik-canary/middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: url-shortener
spec:
  redirectScheme:
    scheme: https
    permanent: true
