url-shortener/k8s/traefik-canary/ingress-http-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-traefik-http-redirect
  namespace: url-shortener
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: traefik-api.bidservice.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-308
                port:
                  number: 80
