url-shortener/k8s/traefik-canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-traefik-ingress
  namespace: url-shortener
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: >
      url-shortener-redirect-https@kubernetescrd,
      url-shortener-url-shortener-ratelimit@kubernetescrd,
      url-shortener-url-shortener-ipallowlist@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik-api.bidservice.store
      secretName: url-shortener-traefik-tls
  rules:
    - host: traefik-api.bidflow.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-shortener-svc
                port:
                  number: 80
